--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             </ul>
         </nav>
     </header>
+    <div class="hero">
+        <div class="vignette"></div>
+        <h1>Solusi Elektronik Rumah Anda</h1>
+    </div>
     <div class="main">
         <h1>Produk Unggulan</h1>
         <div class="products">
@@ -63,7 +67,10 @@
             </div>
         </div>
     </div>
-
+    <div class="daftar-member">
+        <p>Belum menjadi member SKM?</p>
+        <button onclick="window.location.href='form.html';">Daftar Member Sekarang Juga!</button>
+    </div>
     <footer>
         <p>Jl. Rajawali No. 007, Bojonegoro, Jawa Timur, 62117</p>
         <p>+62 896 9893 9701</p>
